external-crates/move/crates/move-compiler/tests/move_2024/naming/unbound_var_call.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E03006]: unexpected name in this position
  ┌─ tests/move_2024/naming/unbound_var_call.move:6:9
  │
2 │     fun foo() {}
  │         --- Similarly named defintion found here
  ·
6 │         fo();
  │         ^^
  │         │
  │         Could not resolve the name 'fo'
  │         Did you mean: 'foo'
