external-crates/move/crates/move-compiler/tests/move_2024/naming/unbound_var_call.move
module a::m {
    fun foo() {}

    fun unbound(fooo: u64) {
        // unbound function/variable fo
        fo();
        fooo;
    }
}
